Personnalisation du Portofolio, 4e commit : update Blog, dernière finition et ajout des templates pour les projets

--- a/index.html
+++ b/index.html
@@ -470,6 +470,7 @@
                                             <li>Express.js</li>
                                             <li>MongoDB</li>
                                         </ul>
+                                        <p><a href="./Portofolio/Project-1.html">Voir le projet</a></p>
                                     </div>
                                 </div>
                             </div>
@@ -545,6 +546,7 @@
                                             <li>Express.js</li>
                                             <li>MongoDB</li>
                                         </ul>
+                                        <p><a href="./Portofolio/Project-1.html">Voir le projet</a></p>
                                     </div>
                                 </div>
                             </div>
@@ -620,6 +622,7 @@
                                             <li>Express.js</li>
                                             <li>MongoDB</li>
                                         </ul>
+                                        <p><a href="./Portofolio/Project-1.html">Voir le projet</a></p>
                                     </div>
                                 </div>
                             </div>
@@ -695,6 +698,7 @@
                                             <li>Express.js</li>
                                             <li>MongoDB</li>
                                         </ul>
+                                        <p><a href="./Portofolio/Project-1.html">Voir le projet</a></p>
                                     </div>
                                 </div>
                             </div>
@@ -770,6 +774,7 @@
                                             <li>Express.js</li>
                                             <li>MongoDB</li>
                                         </ul>
+                                        <p><a href="./Portofolio/Project-1.html">Voir le projet</a></p>
                                     </div>
                                 </div>
                             </div>
@@ -845,6 +850,7 @@
                                             <li>Express.js</li>
                                             <li>MongoDB</li>
                                         </ul>
+                                        <p><a href="./Portofolio/Project-1.html">Voir le projet</a></p>
                                     </div>
                                 </div>
                             </div>
@@ -920,6 +926,7 @@
                                             <li>Express.js</li>
                                             <li>MongoDB</li>
                                         </ul>
+                                        <p><a href="./Portofolio/Project-1.html">Voir le projet</a></p>
                                     </div>
                                 </div>
                             </div>
@@ -995,6 +1002,7 @@
                                             <li>Express.js</li>
                                             <li>MongoDB</li>
                                         </ul>
+                                        <p><a href="./Portofolio/Project-1.html">Voir le projet</a></p>
                                     </div>
                                 </div>
                             </div>
