--- a/Portofolio/Project-1.html
+++ b/Portofolio/Project-1.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="../img/icon.png" type="image/png">
     <link rel="stylesheet" href="../CSS/global.css">
     <link rel="stylesheet" href="../CSS/blog&article.css">
-    <script src="./JS/global.js" defer></script>
+    <script src="../JS/global.js" defer></script>
 </head>
 
 <body>
@@ -67,7 +67,7 @@
     
                 <article>
                     <div class="section-header">
-                        <h1 class="article__title">Article 1</h1>
+                        <h1 class="article__title">Project 1</h1>
                         <p class="article__meta">Publié le 14 janvier 2022</p>
                     </div>
                     <img src="https://picsum.photos/1200/600?random=1" width="1200" height="600" loading="lazy" alt=""
