Personnalisation du Portofolio, 6e commit: Ajout de nouveau projet

--- a/Portofolio/Clients_segmenatation.html
+++ b/Portofolio/Clients_segmenatation.html
@@ -146,8 +146,8 @@
                 <h2 class="h3">Projets récents</h2>
                 <ul>
                     <li><a href="./projet-5">Projet 5</a></li>
-                    <li><a href="./projet-4">Projet 4</a></li>
-                    <li><a href="./projet-3">Projet 3</a></li>
+                    <li><a href="./Housing_Prediction.html">Prédiction des prix des maisons</a></li>
+                    <li><a href="./Calculatrice_DIY.html">Calculatrice DIY</a></li>
                     <li><a href="./WorkFlexSurvey.html">Analyse RH · Machine Learning</a></li>
                 </ul>
             </aside>
@@ -184,7 +184,7 @@
                     </ul>
                 </div>
                 <div class="grid__item">
-                    <p>Copyright ¤ 2025 nomdusite. All Rights Reserved.</p>
+                    <p>Copyright © 2025 nomdusite. All Rights Reserved.</p>
                 </div>
             </div>
         </div>
