Création d'une page Portofolio, ajout d'un nouveau projet

--- a/Portofolio/Housing_Prediction.html
+++ b/Portofolio/Housing_Prediction.html
@@ -142,7 +142,7 @@
                         
                         <h3>📎 Ressources</h3>
                         <ul>
-                            <li><a href="https://github.com/JWulfran/WorkFlexSurvey" target="_blank">Code source sur GitHub</a></li>
+                            <li><a href="https://github.com/JWulfran/Python_for_Data_Science?tab=readme-ov-file#-pr%C3%A9diction-de-prix-immobiliers-avec-machine-learning-python" target="_blank">Code source sur GitHub</a></li>
                             <li><a href="../docs/Projet-Final-E2025-RH.pdf" target="_blank">Télécharger le rapport complet (PDF)</a>
                             </li>
                         </ul>
