Ajout de nouveau projet : Customer segmentation RFM

--- a/Portofolio/Housing_Prediction.html
+++ b/Portofolio/Housing_Prediction.html
@@ -164,7 +164,7 @@
                 </ul>
                 <h2 class="h3">Projets récents</h2>
                 <ul>
-                    <li><a href="./projet-5">Projet 5</a></li>
+                    <li><a href="./RFM_analysis_POWERBI.html">Customer Segmentation |RFM Analysis</a></li>
                     <li><a href="./Calculatrice_DIY.html">Calculatrice DIY</a></li>
                     <li><a href="./Clients_segmenatation.html">Marketing prédictif · Classification</a></li>
                     <li><a href="./WorkFlexSurvey.html">Analyse RH · Machine Learning</a></li>
