--- a/Portofolio/Clients_segmenatation.html
+++ b/Portofolio/Clients_segmenatation.html
@@ -145,7 +145,7 @@
                 </ul>
                 <h2 class="h3">Projets récents</h2>
                 <ul>
-                    <li><a href="./projet-5">Projet 5</a></li>
+                    <li><a href="./RFM_analysis_POWERBI.html">Customer Segmentation |RFM Analysis</a></li>
                     <li><a href="./Housing_Prediction.html">Prédiction des prix des maisons</a></li>
                     <li><a href="./Calculatrice_DIY.html">Calculatrice DIY</a></li>
                     <li><a href="./WorkFlexSurvey.html">Analyse RH · Machine Learning</a></li>
