--- a/Portofolio/Portofolio.html
+++ b/Portofolio/Portofolio.html
@@ -26,6 +26,7 @@
                     <li><a href="..#Services">Services</a></li>
                     <li><a href="..#Skills">Compétences</a></li>
                     <li><a href="..#Portofolio">Portofolio</a></li>
+                    <li><a href="../Blog/blog.html">Blog</a></li>
                     <li><a href="..#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -421,7 +422,7 @@
                 </div>
                 <div class="grid__item">
                     <div class="card" data-category="app">
-                        <img src="./img/rfm_thumb.jpg" width="400" height="250" loading="lazy" alt="Customer Analytics RFM · Power BI">
+                        <img src="../img/RFM_analysis_card.png" width="400" height="250" loading="lazy" alt="Customer Analytics RFM · Power BI">
                         <div class="card__inner">
                             <h3 class="card__title">Customer Analytics RFM</h3>
                             <p class="category">Data Visualisation / BI</p>
@@ -437,9 +438,9 @@
                             <div class="container">
                                 <div class="grid">
                                     <div class="grid__item">
-                                        <img src="./img/rfm_dashboard_1.jpg" loading="lazy" width="560" height="373" class="card__image"
+                                        <img src="../img/RFM_analysis_img_1.png" loading="lazy" width="560" height="373" class="card__image"
                                             alt="Dashboard RFM — vue d'ensemble" />
-                                        <img src="./img/rfm_dashboard_2.jpg" loading="lazy" width="560" height="373" class="card__image"
+                                        <img src="../img/RFM_analysis_img_2.png" loading="lazy" width="560" height="373" class="card__image"
                                             alt="Dashboard RFM — détail segments" />
                                     </div>
                                     <div class="grid__item">
