Réglage article RFM

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                         </div>
                         <div class="service__content">
                             <h3 class="title">TABLEAU DE BORD & BI</h3>
-                            <p>Conception et déploiement de dashboards interactifs (Power BI, Excel, Google Data Studio) pour faciliter le suivi de la
+                            <p>Conception et déploiement de dashboards interactifs (Power BI, Excel) pour faciliter le suivi de la
                             performance et les décisions stratégiques.</p>
                         </div>
                     </div>
